--- a/hydrogen-storefront/package.json
+++ b/hydrogen-storefront/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hydrogen-storefront",
+  "name": "hello-world",
   "private": true,
   "sideEffects": false,
   "version": "0.0.0",
@@ -11,8 +11,8 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@remix-run/react": "^1.17.1",
-    "@shopify/cli": "^3.46.5",
+    "@remix-run/react": "1.17.1",
+    "@shopify/cli": "3.45.0",
     "@shopify/cli-hydrogen": "^5.0.1",
     "@shopify/hydrogen": "^2023.4.5",
     "@shopify/remix-oxygen": "^1.1.1",
